<?xml version="1.0" encoding="utf-8"?>
<layout>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhiteSmoke"
    android:padding="25dp"
    android:clickable="true"
    >


    <com.protectapp.customview.TextInputView
        android:id="@+id/old_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/toolbar_size"
        android:nextFocusDown="@id/new_password_input"
        app:hint="@string/old_password"
        app:inputType="password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/new_password_input"
        />
    <com.protectapp.customview.TextInputView
        android:id="@+id/new_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nextFocusDown="@id/confirm_password_input"
        app:hint="@string/new_password"
        app:inputType="password"
        app:layout_constraintTop_toBottomOf="@id/old_password_input"
        app:layout_constraintBottom_toTopOf="@id/confirm_password_input"
        />
    <com.protectapp.customview.TextInputView
        android:id="@+id/confirm_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hint="@string/confirm_password"
        app:inputType="password"
        app:layout_constraintTop_toBottomOf="@id/new_password_input"
        app:layout_constraintBottom_toTopOf="@id/save_button"

        />
    <com.protectapp.customview.NMGButton
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/default_button_bg"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_input"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.9"
        android:layout_marginTop="20dp"
        />

</android.support.constraint.ConstraintLayout>
</layout>