<?xml version="1.0" encoding="utf-8"?>
<layout>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:gravity="center_horizontal"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_img_iv"
            android:layout_width="@dimen/drawer_menu_user_img_size"
            android:layout_height="@dimen/drawer_menu_user_img_size"
            android:src="@drawable/ic_user_img_placeholder"
         />
        <com.protectapp.customview.NMGTextView
            android:id="@+id/user_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/colorTxtBlack"
            android:textStyle="bold"
            android:text="Thomas Kukabango"
            android:layout_marginTop="15dp"
            />
        <com.protectapp.customview.NMGTextView
            android:id="@+id/user_mobile_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorTxtLGray"
            android:text="+91 9990144688"
            android:layout_marginTop="5dp"
            />
        <com.protectapp.customview.NMGTextView
            android:id="@+id/user_email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorTxtBlue"
            android:text="thomas.kukabango@gmail.com"
            android:layout_marginTop="5dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/header_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        >
        <com.protectapp.customview.NMGTextView
            android:id="@+id/home_nav_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:drawableLeft="@drawable/ic_home"
            android:textColor="@color/colorTxtBlack"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:drawablePadding="15dp"
            />
        <com.protectapp.customview.NMGTextView
            android:id="@+id/my_profile_nav_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_profile"
            android:drawableLeft="@drawable/ic_user"
            android:textColor="@color/colorTxtBlack"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:drawablePadding="15dp"
            />
        <com.protectapp.customview.NMGTextView
            android:id="@+id/change_password_nav_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:drawableLeft="@drawable/ic_lock"
            android:textColor="@color/colorTxtBlack"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:drawablePadding="15dp"
            />
        <com.protectapp.customview.NMGTextView
            android:id="@+id/about_us_nav_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_protect_app"
            android:drawableLeft="@drawable/ic_file"
            android:textColor="@color/colorTxtBlack"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:drawablePadding="15dp"
            />
        <com.protectapp.customview.NMGTextView
            android:id="@+id/privacy_policy_nav_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:drawableLeft="@drawable/ic_file"
            android:textColor="@color/colorTxtBlack"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:drawablePadding="15dp"
            />
        <com.protectapp.customview.NMGTextView
            android:id="@+id/logout_nav_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:drawableLeft="@drawable/ic_logout"
            android:textColor="@color/colorErrorRed"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:drawablePadding="15dp"
            />
    </LinearLayout>
<ImageView
    android:id="@+id/close_menu_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_close"
    android:background="?actionBarItemBackground"
    android:padding="5dp"
    android:layout_marginLeft="15dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0"
    app:layout_constraintVertical_bias="0.05"
    />
</android.support.constraint.ConstraintLayout>
</ScrollView>
</layout>