<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhiteSmoke">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="35dp"
            tools:context="com.protectapp.activity.LoginActivity">

            <ImageView
                android:id="@+id/app_logo_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/app_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                android:layout_marginTop="55dp"
                />
            <TextView
                android:id="@+id/header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_password"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/app_logo_iv"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/colorTxtBlack"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintVertical_bias="0"
                android:layout_marginTop="35dp"
                />
            <TextView
                android:id="@+id/header_sub_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/password_help"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header_title"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/colorTxtGray"
                android:gravity="center"
                android:textSize="16sp"
                app:layout_constraintVertical_bias="0"
                android:layout_marginTop="20dp"
                app:layout_constraintWidth_percent="0.9"
                />


            <com.protectapp.customview.TextInputView
                android:id="@+id/new_password_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:nextFocusDown="@id/confirm_password_input"
                app:hint="@string/new_password"
                app:inputType="password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header_sub_title"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.9" />

            <com.protectapp.customview.TextInputView
                android:id="@+id/confirm_password_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:hint="@string/confirm_password"
                app:inputType="password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/new_password_input"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.9" />



            <com.protectapp.customview.NMGButton
                android:id="@+id/create_password_button"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:background="@drawable/default_button_bg"
                android:text="@string/reset_password"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirm_password_input"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.9"
                android:layout_marginTop="20dp"

                />

            <TextView
                android:id="@+id/new_here_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New here? click here"
                android:textColor="@color/colorGreen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_button"
                app:layout_constraintVertical_bias="0"
                android:layout_marginTop="20dp" />
            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:background="?actionBarItemBackground"
                android:src="@drawable/ic_back"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/status_bar_height"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>